--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ Hello, my name is Saar Ezagouri and I am a PhD student of Prof. Gad Asher in the
 </p>
 <a href="https://saarezagouri980.github.io/">My Github Page</a>
 <br>
-<img src="C:/Users/Saar/Pictures/IMG-20191006-WA0022.jpg" alt="Austin" width="470" height="75" />
+<img src="C:/Users/Saar/Pictures/IMG-20191006-WA0022.jpg" alt="Saar_Vicky" width="470" height="75" />
 </body>
 </html>
 
